# spoor

./: .env.example  .gitignore  LICENSE  Makefile  PLAN.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: site-parity.yml
datasets/: README.md  case001_ground_truth.json  case001_ground_truth_dc01_memory.json
docs/: devpost.md
runs/2026-06-10-051628-supervisor-live/: audit.jsonl  report.json  run_meta.json  token_usage.json  transcript.md
runs/2026-06-10-071015-supervisor-live/: audit.jsonl  report.json  run_meta.json  token_usage.json  transcript.md
runs/2026-06-12-231634-case001-real/: accuracy_report.md  audit.jsonl  findings.json  findings.raw.json  report.json  run_meta.json  token_usage.json  transcript.md
runs/2026-06-14-155749-case001-real/: accuracy_report.md  audit.jsonl  findings.json  report.json  run_meta.json  token_usage.json  transcript.md
scripts/: demo_walkthrough.sh  export_site_data.py  live_supervisor_run.py  real_case_run.py  rescore_run.py
spoor_sift/: __init__.py  accuracy.py  audit.py  cli.py  guardrails.py  model.py  runner.py  server.py
spoor_sift/orchestration/: __init__.py  agents.py  gate.py  report.py  state.py  supervisor.py  tools.py
spoor_sift/tools/: __init__.py  base.py  disk.py  indicators.py  memory.py  registry.py  timeline.py
tests/: test_accuracy.py  test_agents.py  test_audit.py  test_cli.py  test_export_site_data.py  test_findings_from_report.py  test_gate.py  test_guardrails.py  test_model.py  test_orchestration_tools.py  test_report.py  test_runner.py  test_server.py  test_show_report.py  test_show_selfcorrect.py  test_supervisor.py  test_tools_disk.py  test_tools_indicators.py  test_tools_memory.py  test_tools_registry.py  test_tools_timeline.py
web/: package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/components/: ArchitectureDiagram.tsx
(+26 files in other folders)
