[project]
name = "spoor"
version = "0.1.0"
description = "Autonomous DFIR agent: read-only SANS SIFT forensic tools over MCP, with architectural guardrails and a hash-chained audit trail."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "RECTOR-LABS" }]
keywords = ["dfir", "forensics", "incident-response", "mcp", "sift", "volatility", "langgraph"]

dependencies = [
    "mcp[cli]>=1.2",
]

[project.scripts]
spoor = "spoor_sift.cli:main"
spoor-sift = "spoor_sift.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spoor_sift"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
